// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AutoTranslate Should change tag 1`] = `
<div>
  <p>
    Hello world
  </p>
</div>
`;

exports[`AutoTranslate Should fallthrough classes 1`] = `
<div>
  <span
    class="my-class"
  >
    Hello world
  </span>
</div>
`;

exports[`AutoTranslate Should simple render 1`] = `
<div>
  <span>
    Hello world
  </span>
</div>
`;
